hphp/hack/test/typecheck/coeffects/enum-class_nonvariant-access.php.exp
ERROR: File "enum-class_nonvariant-access.php", line 9, characters 22-30:
Using `EC::class` in this position will trigger an implicit runtime conversion to string, please use `nameof EC` (Typing[4482])
